# Tutorials

./: README.md  pyproject.toml
Projects/mysite/: db.sqlite3
Projects/mysite/mysite/: settings.py
Projects/mysite/polls/: admin.py  models.py  urls.py  views.py
Projects/server_client/testServer/: importCSV.py
dependency_injector/: pyproject.toml
dependency_injector/src/providers/configuration/: provider_configuration_pydantic.py  provider_configuration_pydantic_validator_dotenv.py
dependency_injector/src/providers/factory/: provider_factory_chaining.py
dependency_injector/src/singleton/: provider_singleton_with_multi_threads.py
dependency_injector/src/wiring/: README.md
django/documents/: Django Tutorial.pptx
documents/: Django Tutorial.pptx
kotlin/byte.demo.client/: pom.xml
kotlin/echo.client/: build.gradle.kts  settings.gradle.kts
kotlin/echo.server/: settings.gradle.kts
kotlin/omok.client/: build.gradle.kts
kotlin/omok.netty.seerver/: build.gradle.kts  settings.gradle.kts
kotlin/omok.server/: build.gradle.kts  settings.gradle.kts
kotlin/omok_bot/: build.gradle.kts  settings.gradle.kts
kotlin/pizza.machine/: settings.gradle.kts
kotlin/sandbox/: pom.xml
mysite/: db.sqlite3
mysite/polls/: models.py
python/apache_tika/: docker-compose.yaml  pyproject.toml  tika_client.ipynb  tika_client_python.ipynb
react/: README.md
react-app/: .eslintcache
react-app/src/: App.js
react-app/src/components/: Content.js  Control.js  CreateContent.js  ReadContent.js  Subject.js  TOC.js  UpdateContent.js
react/react-app/: .eslintcache  package-lock.json  package.json
react/react-app/src/: App.js
src/singleton/: provider_singleton.py  provider_singleton_not_tied_accross_containers.py
src/wiring/: wiring.py  wiring_fastapi.py
(+244 files in other folders)
