[tool.poetry]
name = "mockdependencyinjector"
version = "0.1.0"
description = ""
authors = ["Ryu0n <hsung951027@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
dependency-injector = "^4.41.0"
ipykernel = "^6.25.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
