[project]
name = "apache-tika"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryu0n",email = "hsung951027@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tika (>=3.1.0,<4.0.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "pyhwp (>=0.1b15,<0.2)",
    "python-docx (>=1.2.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
